# ankor-voice-agent

./: .env  .env.example  .gitignore  README.md  pyproject.toml
ankor_voice_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
app/: config.py  main.py  session_state.py  ws_protocol.py
app/adk/: agent.py  runner.py  tools.py
app/integrations/: ankor_api.py
app/schemas/: tool_inputs.py  tool_outputs.py
app/web/: app.js  index.html  styles.css
tests/: test_tools.py
